src/styles/components/_route.scss
.route-big-button {
    background: $brick-red;
    border: none;
    // border-bottom:.6rem solid darken($purple,10%); // sass reference functions
    color: $white;
    // font-weight: bold;
    font-size: $s-size;
    width: 100%; // take up the whole width of its container
    margin-bottom: $m-size;
    margin-Top: $m-size;
    padding: 1.2rem;
    border-width: 1px;
    border-style: solid;
    letter-spacing:2.5px;
}
.rout__image{
    width: '100%';
    height: 'auto';
    // max-width: 100%; 
}

.route__image::after {
    // background-image: linear-gradient(to bottom, transparent 0%, white 100%);
    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0, $background 100%);
    display: block;
    position: relative;
    margin-top: -200px;
    height: 200px;
    width: 100%;
    content: '';
}

.route__image--align {
    align-items: flex-end;
}

